--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
                 <p>Los blogs son una manera rapida de aprender y enseñar.</p>
                 <p>Si no me crees, pos me vale</p>
-                <p><a href="https://imgur.com/a/OYiUSCe"></a><img src="imagenes/gato plantilla.JPG" width="100%"></p>
+                <p><a href="https://imgur.com/lQNqeH8"><img src="https://i.imgur.com/lQNqeH8.jpg" width="100%"/></a></p>
             </div>
             <div id="footer">
                 <p style="font-weight: bold;">Made in Colombia</p>
